style: Fix lint error by removing redundant opening tag

--- a/index.html
+++ b/index.html
@@ -70,90 +70,89 @@
     <div id="root"></div>
     <div class="seo">
       <article>
-        <article>
-          <p>
-            Kanji Heatmap is an exploration tool with advanced filtering,
-            sorting, frequency heatmap visualizations, and detailed kanji
-            information. This tool can help you prioritize which kanji to learn
-            based on your specific goals.
-          </p>
-          <p>
-            The kanji you encounter in casual Twitter posts differ from those
-            found in literary works, and the kanji commonly used in TV dramas
-            may vary from those in news articles.
-          </p>
-          <p>
-            Visual learners will appreciate the heatmap feature, which
-            highlights more frequently used kanji in brighter colors, with less
-            common characters shown in progressively duller shades.{" "}
-          </p>
-          <p>
-            Unlike many kanji resources that display characters in a single
-            style, Kanji Heatmap lets you change fonts to see how the appearance
-            of characters can vary.
-          </p>
-          <p>
-            While Kanji Heatmap is not a dictionary, it offers useful kanji
-            details. Simply click on any kanji to view sample words, meanings,
-            onyomi and kunyomi readings, stroke order animations, component
-            breakdowns, and more.
-          </p>
-        </article>
+        <p>
+          Kanji Heatmap is an exploration tool with advanced filtering, sorting,
+          frequency heatmap visualizations, and detailed kanji information. This
+          tool can help you prioritize which kanji to learn based on your
+          specific goals.
+        </p>
+        <p>
+          The kanji you encounter in casual Twitter posts differ from those
+          found in literary works, and the kanji commonly used in TV dramas may
+          vary from those in news articles.
+        </p>
+        <p>
+          Visual learners will appreciate the heatmap feature, which highlights
+          more frequently used kanji in brighter colors, with less common
+          characters shown in progressively duller shades.{" "}
+        </p>
+        <p>
+          Unlike many kanji resources that display characters in a single style,
+          Kanji Heatmap lets you change fonts to see how the appearance of
+          characters can vary.
+        </p>
+        <p>
+          While Kanji Heatmap is not a dictionary, it offers useful kanji
+          details. Simply click on any kanji to view sample words, meanings,
+          onyomi and kunyomi readings, stroke order animations, component
+          breakdowns, and more.
+        </p>
+      </article>
 
-        <h1>What is Kanji Heatmap about and what is it useful for</h1>
+      <h1>What is Kanji Heatmap about and what is it useful for</h1>
 
-        <section>
-          <h2>Description 1</h2>
-          <p>
-            A tool designed to help learners of Japanese visualize and
-            prioritize their kanji study based on frequency of use.
-          </p>
-          <h3>What it does</h3>
-          <ol>
-            <li>
-              Frequency-Based Heatmap – The site color-codes kanji based on how
-              often they appear in written Japanese, helping learners focus on
-              the most useful characters first.
-            </li>
-            <li>
-              Customizable Study Focus – Users can sort and filter kanji by JLPT
-              level, school grade (Japanese education system), frequency rank
-              and much more
-            </li>
-            <li>
-              Interactive Exploration – Hovering or clicking on a kanji provides
-              details like readings, meanings, and example words.
-            </li>
-            <li>
-              Study Planning – Helps users identify gaps in their knowledge by
-              highlighting which high-frequency kanji they haven't learned yet.
-            </li>
-          </ol>
-          <h3>Useful for</h3>
-          <ul>
-            <li>
-              Efficiency – Prioritizes learning the kanji you’ll encounter most
-              often.
-            </li>
-            <li>
-              Visual Learners – The heatmap format makes it easy to see
-              importance at a glance.
-            </li>
-            <li>
-              Test Preparation – Great for JLPT or kanji kentei study by
-              focusing on level-appropriate characters.
-            </li>
-            <li>
-              Review & Gap Analysis – Advanced learners can check if they’ve
-              missed any common kanji.
-            </li>
-          </ul>
-          <p>
-            Kanji Heatmap is particularly useful if you want a data-driven
-            approach to kanji learning rather than just following a fixed order
-            (like RTK or JLPT lists)
-          </p>
-        </section>
+      <section>
+        <h2>Description 1</h2>
+        <p>
+          A tool designed to help learners of Japanese visualize and prioritize
+          their kanji study based on frequency of use.
+        </p>
+        <h3>What it does</h3>
+        <ol>
+          <li>
+            Frequency-Based Heatmap – The site color-codes kanji based on how
+            often they appear in written Japanese, helping learners focus on the
+            most useful characters first.
+          </li>
+          <li>
+            Customizable Study Focus – Users can sort and filter kanji by JLPT
+            level, school grade (Japanese education system), frequency rank and
+            much more
+          </li>
+          <li>
+            Interactive Exploration – Hovering or clicking on a kanji provides
+            details like readings, meanings, and example words.
+          </li>
+          <li>
+            Study Planning – Helps users identify gaps in their knowledge by
+            highlighting which high-frequency kanji they haven't learned yet.
+          </li>
+        </ol>
+        <h3>Useful for</h3>
+        <ul>
+          <li>
+            Efficiency – Prioritizes learning the kanji you’ll encounter most
+            often.
+          </li>
+          <li>
+            Visual Learners – The heatmap format makes it easy to see importance
+            at a glance.
+          </li>
+          <li>
+            Test Preparation – Great for JLPT or kanji kentei study by focusing
+            on level-appropriate characters.
+          </li>
+          <li>
+            Review & Gap Analysis – Advanced learners can check if they’ve
+            missed any common kanji.
+          </li>
+        </ul>
+        <p>
+          Kanji Heatmap is particularly useful if you want a data-driven
+          approach to kanji learning rather than just following a fixed order
+          (like RTK or JLPT lists)
+        </p>
+      </section>
 
       <article>
         <h1>Japanese Learning Resources</h1>
